--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div class="center">
-            <img src="/ui/madi.png" class="img-medium"/>
+            <img src="file:///Users/umashankarv/Downloads/Hanuman%20with%20hill%20Blessing%204.jpg" class="img-medium"/>
         </div>
         <br>
         <div class="center text-big bold">
